db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: rebacklogs
spec:
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: rebacklogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:9.6-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          exec: 
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 60
          timeoutSeconds: 5
        livenessProbe:
          exec: 
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 60
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres
