redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - name: redis-port
    port: 6379
    protocol: TCP
  selector:
    app: redis

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: redis
        readinessProbe:
          exec: 
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          exec: 
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 30
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /data
          name: redis
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis
